--- a/index.html
+++ b/index.html
@@ -1,11 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pizza Palace</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+        <div class="container">
+            <a class="navbar-brand" href="#">Pizza Palace</a>
+        </div>
+    </nav>
+
+    <!-- Hero Banner -->
+    <section class="bg-light text-center py-5">
+        <div class="container">
+            <h1 class="display-4">Welcome to Pizza Palace</h1>
+            <p class="lead">Fresh, hot, and made just for you!</p>
+        </div>
+    </section>
+
+    <!-- Browse Menu -->
+    <section class="py-5 bg-white">
+        <div class="container">
+            <h2 class="mb-4">Our Menu</h2>
+            <div class="row g-4">
+                <!-- Pizza Item -->
+                <div class="col-md-4">
+                    <div class="card pizza-card">
+                        <img src="https://via.placeholder.com/400x200?text=Pepperoni+Pizza" class="card-img-top"
+                            alt="Pepperoni Pizza">
+                        <div class="card-body">
+                            <h5 class="card-title">Pepperoni Pizza</h5>
+                            <p class="card-text">Classic pizza topped with mozzarella cheese and spicy pepperoni.</p>
+                            <span class="badge bg-success">Special Offer</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- Going to add more pizza items -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Customization Options -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <h2 class="mb-4">Customize Your Pizza</h2>
+            <form>
+                <div class="mb-3">
+                    <label class="form-label">Choose Size:</label><br>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="size" id="small" value="small">
+                        <label class="form-check-label" for="small">Small</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="size" id="medium" value="medium">
+                        <label class="form-check-label" for="medium">Medium</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="size" id="large" value="large">
+                        <label class="form-check-label" for="large">Large</label>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label">Toppings:</label><br>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="extra-cheese">
+                        <label class="form-check-label" for="extra-cheese">Extra Cheese</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="mushrooms">
+                        <label class="form-check-label" for="mushrooms">Mushrooms</label>
+                    </div>
+                    <!-- Going to add more topping items -->
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label">Crust Type:</label>
+                    <select class="form-select">
+                        <option>Thin Crust</option>
+                        <option>Thick Crust</option>
+                        <option>Cheese Stuffed</option>
+                    </select>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <!-- Basic Location & Hours -->
+    <section class="py-5 bg-white">
+        <div class="container">
+            <h2 class="mb-4">Visit Us</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Our Location</h5>
+                    <p>123 Pizza Street<br>Cheesetown, NY 10001</p>
+                    <p><strong>Phone:</strong> (555) 123-4567</p>
+                    <p><strong>Email:</strong> contact@pizzapalace.com</p>
+                </div>
+                <div class="col-md-6">
+                    <h5>Operating Hours</h5>
+                    <ul class="list-unstyled">
+                        <li>Mon–Fri: 11am – 10pm</li>
+                        <li>Sat–Sun: 12pm – 11pm</li>
+                    </ul>
+                    <img src="https://via.placeholder.com/400x200?text=Map+Placeholder" class="img-fluid mt-3"
+                        alt="Map">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-danger text-white text-center py-3">
+        <p class="mb-0">&copy; 2025 Pizza Palace. All rights reserved.</p>
+    </footer>
+
 </body>
+
 </html>
