Added class w-100-mobile to p tag within the form. Updated CSS

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Toppings:</label><br>
-                    <p class="p-section-bg w-75 p-2">Choose Cheese</p>
+                    <p class="p-section-bg w-75 w-100-mobile p-2">Choose Cheese</p>
                     <div class="form-check form-check-inline pb-3">
                         <input class="form-check-input" type="checkbox" id="extra-cheese">
                         <label class="form-check-label" for="extra-cheese">Extra Cheese</label>
@@ -135,7 +135,7 @@
                         <input class="form-check-input" type="checkbox" id="feta-cheese">
                         <label class="form-check-label" for="Feta-cheese">Shredded Provolone Cheese</label>
                     </div>
-                    <p class="p-section-bg w-75 p-2">Choose Meats</p>
+                    <p class="p-section-bg w-75 w-100-mobile p-2">Choose Meats</p>
                     <div class="form-check form-check-inline pb-3">
                         <input class="form-check-input" type="checkbox" id="ham">
                         <label class="form-check-label" for="ham">Ham</label>
@@ -148,7 +148,7 @@
                         <input class="form-check-input" type="checkbox" id="bacon">
                         <label class="form-check-label" for="bacon">Bacon</label>
                     </div>
-                    <p class="p-section-bg w-75 p-2 pt-3">Choose Non-meats</p>
+                    <p class="p-section-bg w-75 w-100-mobile p-2 pt-3">Choose Non-meats</p>
                     <div class="form-check form-check-inline pb-3">
                         <input class="form-check-input" type="checkbox" id="mushrooms">
                         <label class="form-check-label" for="mushrooms">Mushrooms</label>
@@ -176,7 +176,7 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Crust Type:</label>
-                    <select class="form-select w-75">
+                    <select class="form-select w-75 w-100-mobile">
                         <option>Thin Crust</option>
                         <option>Thick Crust</option>
                         <option>Cheese Stuffed</option>
