index.html updates

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-lg-center ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white px-3" href="#our-menu">Our Menu</a>
+                        <a class="nav-link text-white btm-border px-3 py-4 py-md-0" href="#our-menu">Our Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white px-3" href="#customization-your-pizza">Customize Your Pizza</a>
+                        <a class="nav-link text-white btm-border px-3 py-4 py-md-0" href="#customization-your-pizza">Customize Your Pizza</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white px-3" href="#visit-us">Visit Us</a>
+                        <a class="nav-link text-white px-3 py-4 py-md-0" href="#visit-us">Visit Us</a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
     <!-- Browse Menu -->
     <section id="our-menu" class="py-5 bg-white">
         <div class="container">
-            <h2 class="text-md-center mb-5"><b>Our Menu</b></h2>
+            <h2 class="text-center mb-5"><b>Our Menu</b></h2>
             <div class="row g-4">
                 <!-- Pizza Item -->
                 <div class="col-md-4">
@@ -95,7 +95,7 @@
     <!-- Customization Options -->
     <section id="customization-your-pizza" class="py-5 bg-dark text-white customization-bg">
         <div class="container">
-            <h2 class="text-md-center mb-5"><b>Customize Your Pizza </b></h2>
+            <h2 class="text-center mb-5"><b>Customize Your Pizza </b></h2>
             <form>
                 <div class="mb-3 form-sz">
                     <label class="form-label">Choose Size:</label><br>
@@ -112,31 +112,31 @@
                         <label class="form-check-label" for="large">Large</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="size" id="xl-large" value="large">
+                        <input class="form-check-input" type="radio" name="size" id="xl-large" value="xl-large">
                         <label class="form-check-label" for="large">XL-large</label>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Toppings:</label><br>
                     <p class="p-section-bg w-75 w-100-mobile p-2">Choose Cheese</p>
-                    <div class="form-check form-check-inline pb-3">
+                    <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="extra-cheese">
                         <label class="form-check-label" for="extra-cheese">Extra Cheese</label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="feta-cheese">
-                        <label class="form-check-label" for="Feta-cheese">Feta Cheese</label>
+                        <label class="form-check-label" for="feta-cheese">Feta Cheese</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="extra-cheese">
-                        <label class="form-check-label" for="extra-cheese">Cheddar Cheese Blend</label>
+                        <input class="form-check-input" type="checkbox" id="cheddar-cheese-blend">
+                        <label class="form-check-label" for="cheddar-cheese-blend">Cheddar Cheese Blend</label>
                     </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="feta-cheese">
-                        <label class="form-check-label" for="Feta-cheese">Shredded Provolone Cheese</label>
+                    <div class="form-check form-check-inline pb-3">
+                        <input class="form-check-input" type="checkbox" id="shredded-provolone-cheese">
+                        <label class="form-check-label" for="shredded-provolone-cheese">Shredded Provolone Cheese</label>
                     </div>
                     <p class="p-section-bg w-75 w-100-mobile p-2">Choose Meats</p>
-                    <div class="form-check form-check-inline pb-3">
+                    <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="ham">
                         <label class="form-check-label" for="ham">Ham</label>
                     </div>
@@ -144,12 +144,12 @@
                         <input class="form-check-input" type="checkbox" id="beef">
                         <label class="form-check-label" for="beef">Beef</label>
                     </div>
-                    <div class="form-check form-check-inline">
+                    <div class="form-check form-check-inline pb-3">
                         <input class="form-check-input" type="checkbox" id="bacon">
                         <label class="form-check-label" for="bacon">Bacon</label>
                     </div>
                     <p class="p-section-bg w-75 w-100-mobile p-2 pt-3">Choose Non-meats</p>
-                    <div class="form-check form-check-inline pb-3">
+                    <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="mushrooms">
                         <label class="form-check-label" for="mushrooms">Mushrooms</label>
                     </div>
@@ -169,8 +169,8 @@
                         <input class="form-check-input" type="checkbox" id="diced-tomatoes">
                         <label class="form-check-label" for="diced-tomatoes">Diced Tomatoes</label>
                     </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="p">
+                    <div class="form-check form-check-inline pb-3">
+                        <input class="form-check-input" type="checkbox" id="pineapple">
                         <label class="form-check-label" for="pineapple">Pineapple</label>
                     </div>
                 </div>
@@ -189,26 +189,26 @@
     <!-- Basic Location & Hours -->
     <section id="visit-us" class="py-4 bg-dark text-white">
         <div class="container">
-            <h2 class="text-md-center mb-5">Visit Us</h2>
+            <h2 class="text-center mb-5">Visit Us</h2>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 text-center text-md-start mb-4">
                     <img src="/images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 text-center text-md-start mb-4">
                     <h5>Our Location</h5>
                     <p>123 Pizza Street<br>Cheesetown, NY 10001</p>
                     <p><strong>Phone:</strong> (555) 123-4567</p>
                     <p><strong>Email:</strong> contact@pizzapalace.com</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 text-center text-md-start mb-4">
                     <h5>Operating Hours</h5>
                     <ul class="list-unstyled">
                         <li>Monday – Friday: 11am – 10pm</li>
                         <li>Saturday – Sunday: 12pm – 11pm</li>
                     </ul>
                 </div>
-                <div class="col-md-3">
-                    <img src="/images/map.jpg" class="w-75 img-fluid shadow mt-3" alt="Map">
+                <div class="col-md-3 text-center text-md-start mb-4">
+                    <img src="/images/map.jpg" class="w-75 img-fluid shadow" alt="Map">
                 </div>
             </div>
         </div>
