--- a/index.html
+++ b/index.html
@@ -195,12 +195,6 @@
                     <img src="/images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
                 </div>
                 <div class="col-md-3 text-center text-md-start mb-4">
-                    <h5>Our Location</h5>
-                    <p>123 Pizza Street<br>Cheesetown, NY 10001</p>
-                    <p><strong>Phone:</strong> (555) 123-4567</p>
-                    <p><strong>Email:</strong> contact@pizzapalace.com</p>
-                </div>
-                <div class="col-md-3 text-center text-md-start mb-4">
                     <h5>Operating Hours</h5>
                     <ul class="list-unstyled">
                         <li>Monday – Friday: 11am – 10pm</li>
@@ -208,7 +202,13 @@
                     </ul>
                 </div>
                 <div class="col-md-3 text-center text-md-start mb-4">
-                    <img src="/images/map.jpg" class="w-75 img-fluid shadow" alt="Map">
+                    <h5>Our Location</h5>
+                    <p>123 Pizza Street<br>Cheesetown, NY 10001</p>
+                    <p class="mb-0"><strong>Phone:</strong> (555) 123-4567</p>
+                    <p><strong>Email:</strong> contact@pizzapalace.com</p>
+                </div>
+                <div class="col-md-3 text-center text-md-start mb-4">
+                    <a href="#"><img src="/images/map.jpg" class="w-75 img-fluid shadow" alt="Map"></a>
                 </div>
             </div>
         </div>
