index.html updates

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </section>
 
     <!-- Basic Location & Hours -->
-    <section id="visit-us" class="py-4 bg-dark text-white">
+    <section id="visit-us" class="pt-5 pb-4 bg-dark text-white">
         <div class="container">
             <h2 class="text-center mb-5">Visit Us</h2>
             <div class="row">
