index.html updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand" href="#top">
-                <img src="/images/pizza-place-logo.png" style="max-width: 100px;" alt="Pizza Palace Logo">
+                <img src="/images/pizza-place-logo.png" style="max-width: 85px;" alt="Pizza Palace Logo">
             </a>
             <!-- Toggler (hamburger menu) -->
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -50,7 +50,7 @@
     </section>
 
     <!-- Browse Menu -->
-    <section id="our-menu" class="py-5 bg-white">
+    <section id="our-menu" class="py-5 bg-white menu-bg">
         <div class="container">
             <h2 class="text-center mb-5"><b>Our Menu</b></h2>
             <div class="row g-4">
@@ -95,7 +95,7 @@
     <!-- Customization Options -->
     <section id="customization-your-pizza" class="py-5 bg-dark text-white customization-bg">
         <div class="container">
-            <h2 class="text-center mb-5"><b>Customize Your Pizza </b></h2>
+            <h2 class="text-center mb-5"><b>Customize Your Pizza</b></h2>
             <form>
                 <div class="mb-3 form-sz">
                     <label class="form-label">Choose Size:</label><br>
