--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                         <a class="nav-link text-white btm-border px-3 py-4 py-md-0" href="#our-menu">Our Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white btm-border px-3 py-4 py-md-0" href="#customization-your-pizza">Customize Your Pizza</a>
+                        <a class="nav-link text-white btm-border px-3 py-4 py-md-0"
+                            href="#customization-your-pizza">Customize Your Pizza</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white px-3 py-4 py-md-0" href="#visit-us">Visit Us</a>
@@ -60,8 +61,9 @@
                         <img src="/images/pepperoni-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
                         <div class="card-body">
                             <h5 class="card-title">Pepperoni Pizza</h5>
-                            <p class="card-text">Classic pizza topped with mozzarella cheese and spicy pepperoni with
-                                our homemade pizza crust.</p>
+                            <p class="card-text">Indulge in a timeless classic, generously topped with zesty pepperoni
+                                and rich, melty mozzarella cheese, all layered on our hand-tossed, homemade crust that’s
+                                baked to golden perfection for a bold and satisfying flavor in every bite.</p>
                             <span class="badge bg-success">Special Offer</span>
                         </div>
                     </div>
@@ -71,8 +73,10 @@
                         <img src="/images/hawaiian-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
                         <div class="card-body">
                             <h5 class="card-title">Hawaiian Pizza</h5>
-                            <p class="card-text">Classic Hawaiian Pizza combines pizza sauce, cheese, cooked ham, and
-                                pineapple. This crowd-pleasing pizza recipe starts with our homemade pizza crust.</p>
+                            <p class="card-text">Savor the perfect balance of sweet and savory with our Hawaiian Pizza —
+                                a crowd-pleasing favorite topped with tangy tomato sauce, melty mozzarella cheese,
+                                tender slices of cooked ham, and juicy pineapple chunks. All of this deliciousness rests
+                                on our hand-crafted, homemade crust, delivering a tropical twist in every bite</p>
                             <span class="badge bg-success">Special Offer</span>
                         </div>
                     </div>
@@ -82,8 +86,10 @@
                         <img src="/images/vegetarian-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
                         <div class="card-body">
                             <h5 class="card-title">Vegetarian Pizza</h5>
-                            <p class="card-text">This vegetarian pizza recipe is a lifesaver in those situations. Piled
-                                with caramelized onions, mushrooms, fresh basil, jalapeno and 2 types of honey.</p>
+                            <p class="card-text">Our Vegetarian Pizza is a flavor-packed lifesaver for any craving,
+                                loaded with a vibrant medley of caramelized onions, earthy mushrooms, fresh basil
+                                leaves, and a kick of jalapeño heat — all brought together with a drizzle of not one,
+                                but two distinct types of honey.</p>
                             <span class="badge bg-success">Special Offer</span>
                         </div>
                     </div>
@@ -133,7 +139,8 @@
                     </div>
                     <div class="form-check form-check-inline pb-3">
                         <input class="form-check-input" type="checkbox" id="shredded-provolone-cheese">
-                        <label class="form-check-label" for="shredded-provolone-cheese">Shredded Provolone Cheese</label>
+                        <label class="form-check-label" for="shredded-provolone-cheese">Shredded Provolone
+                            Cheese</label>
                     </div>
                     <p class="p-section-bg w-75 w-100-mobile p-2">Choose Meats</p>
                     <div class="form-check form-check-inline">
