added category to pizza menu, added price for each pizza - special offer

--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
     <section id="our-menu" class="py-5 bg-white menu-bg">
         <div class="container">
             <h2 class="text-center mb-5"><b>Our Menu</b></h2>
-            <div class="row g-4">
+            <div class="row g-4 pb-4 pb-md-5 mb-md-5">
                 <!-- Pizza Item -->
                 <div class="col-md-4">
-                    <div class="card pizza-card card-hover h-100 shadow">
+                    <h4 class="text-center mb-2">Classic</h4>
+                    <hr>
+                    <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
                         <img src="/images/pepperoni-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
                         <div class="card-body">
                             <h5 class="card-title">Pepperoni Pizza</h5>
@@ -65,11 +67,14 @@
                                 and rich, melty mozzarella cheese, all layered on our hand-tossed, homemade crust that’s
                                 baked to golden perfection for a bold and satisfying flavor in every bite.</p>
                             <span class="badge bg-success">Special Offer</span>
+                            <p class="fs-4 fw-600">$19.99 Large two-toppings</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card pizza-card card-hover h-100 shadow">
+                    <h4 class="text-center pt-3 pt-md-0 mb-2">Specialty</h4>
+                    <hr>
+                    <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
                         <img src="/images/hawaiian-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
                         <div class="card-body">
                             <h5 class="card-title">Hawaiian Pizza</h5>
@@ -78,11 +83,14 @@
                                 tender slices of cooked ham, and juicy pineapple chunks. All of this deliciousness rests
                                 on our hand-crafted, homemade crust, delivering a tropical twist in every bite</p>
                             <span class="badge bg-success">Special Offer</span>
+                            <p class="fs-4 fw-600">$21.99 Large two-toppings</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card pizza-card card-hover h-100 shadow">
+                    <h4 class="text-center pt-3 pt-md-0 mb-2">Vegetarian</h4>
+                    <hr>
+                    <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
                         <img src="/images/vegetarian-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
                         <div class="card-body">
                             <h5 class="card-title">Vegetarian Pizza</h5>
@@ -91,6 +99,7 @@
                                 leaves, and a kick of jalapeño heat — all brought together with a drizzle of not one,
                                 but two distinct types of honey.</p>
                             <span class="badge bg-success">Special Offer</span>
+                            <p class="fs-4 fw-600">$18.99 Large two-toppings</p>
                         </div>
                     </div>
                 </div>
