--- a/index.html
+++ b/index.html
@@ -111,98 +111,102 @@
     <section id="customization-your-pizza" class="py-5 bg-dark text-white customization-bg">
         <div class="container">
             <h2 class="text-center mb-5"><b>Customize Your Pizza</b></h2>
-            <form method="POST" action="/submit">
-                <div class="mb-3 form-sz">
-                    <label class="form-label">Choose Size:</label><br>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="size" id="small" value="small">
-                        <label class="form-check-label" for="small">Small</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="size" id="medium" value="medium">
-                        <label class="form-check-label" for="medium">Medium</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="size" id="large" value="large">
-                        <label class="form-check-label" for="large">Large</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="size" id="xl-large" value="xl-large">
-                        <label class="form-check-label" for="large">XL-large</label>
-                    </div>
+            <div class="row">
+                <div class="col-12  justify-content-center d-grid">
+                    <form method="POST" action="/submit" class="form-bg p-5">
+                        <div class="mb-3 form-sz">
+                            <label class="form-label">Choose Size:</label><br>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="size" id="small" value="small">
+                                <label class="form-check-label" for="small">Small</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="size" id="medium" value="medium">
+                                <label class="form-check-label" for="medium">Medium</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="size" id="large" value="large">
+                                <label class="form-check-label" for="large">Large</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="size" id="xl-large" value="xl-large">
+                                <label class="form-check-label" for="large">XL-large</label>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Toppings:</label><br>
+                            <p class="p-section-bg w-100 w-100-mobile p-2">Choose Cheese</p>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="extra-cheese">
+                                <label class="form-check-label" for="extra-cheese">Extra Cheese</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="feta-cheese">
+                                <label class="form-check-label" for="feta-cheese">Feta Cheese</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="cheddar-cheese-blend">
+                                <label class="form-check-label" for="cheddar-cheese-blend">Cheddar Cheese Blend</label>
+                            </div>
+                            <div class="form-check form-check-inline pb-3">
+                                <input class="form-check-input" type="checkbox" id="shredded-provolone-cheese">
+                                <label class="form-check-label" for="shredded-provolone-cheese">Shredded Provolone
+                                    Cheese</label>
+                            </div>
+                            <p class="p-section-bg w-100 w-100-mobile p-2">Choose Meats</p>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="ham">
+                                <label class="form-check-label" for="ham">Ham</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="beef">
+                                <label class="form-check-label" for="beef">Beef</label>
+                            </div>
+                            <div class="form-check form-check-inline pb-3">
+                                <input class="form-check-input" type="checkbox" id="bacon">
+                                <label class="form-check-label" for="bacon">Bacon</label>
+                            </div>
+                            <p class="p-section-bg w-100 w-100-mobile p-2 pt-3">Choose Non-meats</p>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="mushrooms">
+                                <label class="form-check-label" for="mushrooms">Mushrooms</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="green-peppers">
+                                <label class="form-check-label" for="green-peppers">Green Peppers</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="spinach">
+                                <label class="form-check-label" for="spinach">Spinach</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="onions">
+                                <label class="form-check-label" for="onions">Onions</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="diced-tomatoes">
+                                <label class="form-check-label" for="diced-tomatoes">Diced Tomatoes</label>
+                            </div>
+                            <div class="form-check form-check-inline pb-3">
+                                <input class="form-check-input" type="checkbox" id="pineapple">
+                                <label class="form-check-label" for="pineapple">Pineapple</label>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Crust Type:</label>
+                            <select class="form-select w-100 w-100-mobile">
+                                <option>Thin Crust</option>
+                                <option>Thick Crust</option>
+                                <option>Cheese Stuffed</option>
+                            </select>
+                        </div>
+                        <!-- Add to Cart Button -->
+                        <div class="mt-4">
+                            <button type="submit" class="btn btn-danger btn-lg px-4 shadow">Add to Cart</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label">Toppings:</label><br>
-                    <p class="p-section-bg w-75 w-100-mobile p-2">Choose Cheese</p>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="extra-cheese">
-                        <label class="form-check-label" for="extra-cheese">Extra Cheese</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="feta-cheese">
-                        <label class="form-check-label" for="feta-cheese">Feta Cheese</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="cheddar-cheese-blend">
-                        <label class="form-check-label" for="cheddar-cheese-blend">Cheddar Cheese Blend</label>
-                    </div>
-                    <div class="form-check form-check-inline pb-3">
-                        <input class="form-check-input" type="checkbox" id="shredded-provolone-cheese">
-                        <label class="form-check-label" for="shredded-provolone-cheese">Shredded Provolone
-                            Cheese</label>
-                    </div>
-                    <p class="p-section-bg w-75 w-100-mobile p-2">Choose Meats</p>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="ham">
-                        <label class="form-check-label" for="ham">Ham</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="beef">
-                        <label class="form-check-label" for="beef">Beef</label>
-                    </div>
-                    <div class="form-check form-check-inline pb-3">
-                        <input class="form-check-input" type="checkbox" id="bacon">
-                        <label class="form-check-label" for="bacon">Bacon</label>
-                    </div>
-                    <p class="p-section-bg w-75 w-100-mobile p-2 pt-3">Choose Non-meats</p>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="mushrooms">
-                        <label class="form-check-label" for="mushrooms">Mushrooms</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="green-peppers">
-                        <label class="form-check-label" for="green-peppers">Green Peppers</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="spinach">
-                        <label class="form-check-label" for="spinach">Spinach</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="onions">
-                        <label class="form-check-label" for="onions">Onions</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="diced-tomatoes">
-                        <label class="form-check-label" for="diced-tomatoes">Diced Tomatoes</label>
-                    </div>
-                    <div class="form-check form-check-inline pb-3">
-                        <input class="form-check-input" type="checkbox" id="pineapple">
-                        <label class="form-check-label" for="pineapple">Pineapple</label>
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Crust Type:</label>
-                    <select class="form-select w-75 w-100-mobile">
-                        <option>Thin Crust</option>
-                        <option>Thick Crust</option>
-                        <option>Cheese Stuffed</option>
-                    </select>
-                </div>
-                <!-- Add to Cart Button -->
-                <div class="mt-4">
-                    <button type="submit" class="btn btn-danger btn-lg px-4 shadow">Add to Cart</button>
-                </div>
-            </form>
+            </div>
         </div>
     </section>
 
