--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pizza Palace</title>
-    <link rel="icon" type="image/x-icon" href="/images/pizza-place-logo.png">
+    <link rel="icon" type="image/x-icon" href="./images/pizza-place-logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -16,7 +16,7 @@
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand" href="#top">
-                <img src="/images/pizza-place-logo.png" style="max-width: 85px;" alt="Pizza Palace Logo">
+                <img src="./images/pizza-place-logo.png" style="max-width: 85px;" alt="Pizza Palace Logo">
             </a>
             <!-- Toggler (hamburger menu) -->
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -60,7 +60,7 @@
                     <h4 class="text-center mb-2">Classic</h4>
                     <hr>
                     <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
-                        <img src="/images/pepperoni-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
+                        <img src="./images/pepperoni-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
                         <div class="card-body">
                             <h5 class="card-title">Pepperoni Pizza</h5>
                             <p class="card-text">Indulge in a timeless classic, generously topped with zesty pepperoni
@@ -75,7 +75,7 @@
                     <h4 class="text-center pt-3 pt-md-0 mb-2">Specialty</h4>
                     <hr>
                     <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
-                        <img src="/images/hawaiian-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
+                        <img src="./images/hawaiian-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
                         <div class="card-body">
                             <h5 class="card-title">Hawaiian Pizza</h5>
                             <p class="card-text">Savor the perfect balance of sweet and savory with our Hawaiian Pizza —
@@ -91,7 +91,7 @@
                     <h4 class="text-center pt-3 pt-md-0 mb-2">Vegetarian</h4>
                     <hr>
                     <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
-                        <img src="/images/vegetarian-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
+                        <img src="./images/vegetarian-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
                         <div class="card-body">
                             <h5 class="card-title">Vegetarian Pizza</h5>
                             <p class="card-text">Our Vegetarian Pizza is a flavor-packed lifesaver for any craving,
@@ -216,7 +216,7 @@
             <h2 class="text-center mb-5">Visit Us</h2>
             <div class="row">
                 <div class="col-md-3 text-center text-md-start mb-4">
-                    <img src="/images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
+                    <img src="./images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
                 </div>
                 <div class="col-md-3 text-center text-md-start mb-4">
                     <h5>Operating Hours</h5>
@@ -232,7 +232,7 @@
                     <p><strong>Email:</strong> contact@pizzapalace.com</p>
                 </div>
                 <div class="col-md-3 text-center text-md-start mb-4">
-                    <a href="#"><img src="/images/map.jpg" class="w-75 img-fluid shadow" alt="Map"></a>
+                    <a href="#"><img src="./images/map.jpg" class="w-75 img-fluid shadow" alt="Map"></a>
                 </div>
             </div>
         </div>
