--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <p class="lead-head text-white">Fresh, hot, and made just for you!</p>
         </div>
     </section>
+    <div class="bg-danger-border shadow-lg"></div>
 
     <!-- Browse Menu -->
     <section id="our-menu" class="py-5 bg-white menu-bg">
@@ -209,6 +210,7 @@
             </div>
         </div>
     </section>
+    
 
     <!-- Basic Location & Hours -->
     <section id="visit-us" class="pt-5 pb-4 bg-dark text-white">
