--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pizza Palace</title>
-    <link rel="icon" type="image/x-icon" href="./images/pizza-place-logo.png" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="./images/pizza-place-logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger sticky-top shadow">
             <div class="container">
                 <a class="navbar-brand" href="#top">
-                    <img src="./images/pizza-place-logo.png" style="max-width: 85px;" alt="Pizza Palace Logo" />
+                    <img src="./images/pizza-place-logo.png" style="max-width: 85px;" alt="Pizza Palace Logo">
                 </a>
                 <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -57,12 +57,14 @@
                     <!-- Menu Items as Articles -->
                     <article class="col-md-4">
                         <h4 class="text-center mb-2">Classic</h4>
-                        <hr />
+                        <hr>
                         <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
-                            <img src="./images/pepperoni-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza" />
-                            <div class="card-body">
+                            <img src="./images/pepperoni-pizza.jpg" class="w-100 img-fluid" alt="Pepperoni Pizza">
+                            <div class="card-body mb-md-0">
                                 <h5 class="card-title">Pepperoni Pizza</h5>
-                                <p class="card-text">Indulge in a timeless classic...</p>
+                                <p class="card-text">Indulge in a timeless classic, generously topped with zesty pepperoni
+                                    and rich, melty mozzarella cheese, all layered on our hand-tossed, homemade crust that’s
+                                    baked to golden perfection for a bold and satisfying flavor in every bite.</p>
                                 <span class="badge bg-success">Special Offer</span>
                                 <p class="fs-4 fw-600">$19.99 Large two-toppings</p>
                             </div>
@@ -71,12 +73,15 @@
 
                     <article class="col-md-4">
                         <h4 class="text-center pt-3 pt-md-0 mb-2">Specialty</h4>
-                        <hr />
+                        <hr>
                         <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
-                            <img src="./images/hawaiian-pizza.jpg" class="w-100 img-fluid" alt="Hawaiian Pizza" />
-                            <div class="card-body">
+                            <img src="./images/hawaiian-pizza.jpg" class="w-100 img-fluid" alt="Hawaiian Pizza">
+                            <div class="card-body mb-md-0">
                                 <h5 class="card-title">Hawaiian Pizza</h5>
-                                <p class="card-text">Savor the perfect balance...</p>
+                                <p class="card-text">Savor the perfect balance of sweet and savory with our Hawaiian Pizza —
+                                    a crowd-pleasing favorite topped with tangy tomato sauce, melty mozzarella cheese,
+                                    tender slices of cooked ham, and juicy pineapple chunks. All of this deliciousness rests
+                                    on our hand-crafted, homemade crust, delivering a tropical twist in every bite.</p>
                                 <span class="badge bg-success">Special Offer</span>
                                 <p class="fs-4 fw-600">$21.99 Large two-toppings</p>
                             </div>
@@ -85,12 +90,15 @@
 
                     <article class="col-md-4">
                         <h4 class="text-center pt-3 pt-md-0 mb-2">Vegetarian</h4>
-                        <hr />
+                        <hr>
                         <div class="card pizza-card card-hover h-100 h-override-mobile shadow">
-                            <img src="./images/vegetarian-pizza.jpg" class="w-100 img-fluid" alt="Vegetarian Pizza" />
-                            <div class="card-body">
+                            <img src="./images/vegetarian-pizza.jpg" class="w-100 img-fluid" alt="Vegetarian Pizza">
+                            <div class="card-body mb-md-0">
                                 <h5 class="card-title">Vegetarian Pizza</h5>
-                                <p class="card-text">Our Vegetarian Pizza is a flavor-packed lifesaver...</p>
+                                <p class="card-text">Our Vegetarian Pizza is a flavor-packed lifesaver for any craving,
+                                    loaded with a vibrant medley of caramelized onions, earthy mushrooms, fresh basil
+                                    leaves, and a kick of jalapeño heat — all brought together with a drizzle of not one,
+                                    but two distinct types of honey.</p>
                                 <span class="badge bg-success">Special Offer</span>
                                 <p class="fs-4 fw-600">$18.99 Large two-toppings</p>
                             </div>
@@ -212,7 +220,7 @@
                 <h2 class="text-center mb-5">Visit Us</h2>
                 <div class="row">
                     <aside class="col-md-3 text-center text-md-start mb-4">
-                        <img src="./images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant" />
+                        <img src="./images/restaurant.jpg" class="w-75 shadow img-fluid" alt="Pizza Place restaurant">
                     </aside>
                     <section class="col-md-3 text-center text-md-start mb-4">
                         <h5>Operating Hours</h5>
@@ -226,12 +234,12 @@
                         <address>
                             123 Pizza Street<br />
                             Cheesetown, NY 10001<br />
-                            <strong>Phone:</strong> (555) 123-4567<br />
+                            <strong>Phone:</strong> (555) 123-4567<br>
                             <strong>Email:</strong> contact@pizzapalace.com
                         </address>
                     </section>
                     <aside class="col-md-3 text-center text-md-start mb-4">
-                        <a href="#"><img src="./images/map.jpg" class="w-75 img-fluid shadow" alt="Map" /></a>
+                        <a href="#"><img src="./images/map.jpg" class="w-75 img-fluid shadow" alt="Map"></a>
                     </aside>
                 </div>
             </div>
